[tool.poetry]
name = "wireless-system"
version = "0.1.0"
description = ""
authors = ["marianamf0 <“mmf.marianaf@gmail.com”>"]
readme = "README.md"
packages = [{include = "wireless_system"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.5"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
