[tool.poetry]
name = "wireless-system"
version = "0.1.0"
description = ""
authors = ["marianamf0 <“mmf.marianaf@gmail.com”>"]
readme = "README.md"
packages = [{include = "wireless_system"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.5"
matplotlib = "^3.10.1"
matplotlib-multicolored-line = "^0.3.0"
notebook = "^7.4.3"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
